added date format

--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,8 @@
   display: flex;
   justify-content: space-evenly;
 }
+#linkCode {
+  text-align: center;
+  margin-top: -10px;
+  font-size: small;
+}
