--- a/src/Current.css
+++ b/src/Current.css
@@ -1,17 +1,25 @@
-#cityName {
+#cityName,
+#currentDayTime {
   margin-left: 25px;
-  margin-bottom: 0;
 }
 #tempCurrent {
   margin-left: 25px;
-  margin-bottom: 0;
+  list-style-type: none;
 }
-h1 {
-  font-size: 60px;
-  font-weight: 700;
-  margin-right: 25px;
+#tempNow {
+  font-size: 64px;
 }
 
+.currentinfo img {
+  margin-bottom: 20px;
+}
+.currentinfo .unit {
+  font-size: 20px;
+  position: relative;
+
+  top: -34px;
+  margin-left: 5px;
+}
 #enterCity {
   padding: 20px;
 }
@@ -45,5 +53,5 @@ h1 {
   margin-left: 25px;
   margin-top: 0;
   font-size: 14px;
-  color: #3a929e;
+  color: #2d737c;
 }
